test/Tests/Optics/NoMatrixIndex.golden

test\Tests\Optics\NoMatrixIndex.hs:31:10: error:
    * Matrix column index 4 is out of bounds.
      This matrix has 3 rows, 4 columns.
      Note: indexing starts from 0.
    * In a stmt of a 'do' block:
        c <- use @(Name "vertexData" :.: Entry 1 4)
      In the third argument of `entryPoint', namely
        `do c <- use @(Name "vertexData" :.: Entry 1 4)
            put @"gl_Position" (Vec4 c c c 1)'
      In a stmt of a 'do' block:
        entryPoint
          @"main"
          @Vertex
          do c <- use @(Name "vertexData" :.: Entry 1 4)
             put @"gl_Position" (Vec4 c c c 1)
   |
31 |     c <- use @( Name "vertexData" :.: Entry 1 4 )
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
